# housing-prediction-model

./: README.md  house-price-prediction.ipynb  pyproject.toml
