[tool.poetry]
name = "house-price-prediction"
version = "0.1.0"
description = ""
authors = ["Ahmed L Rashed <arashed07@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.25"
pandas = "^2.0"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
scikit-learn = "^1.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
